@@ -14,38 +14,42 @@ public class Evaluator extends Visitor {
     /**
      * Default constructor of the class. Does not initialise anything.
      */
-    public Evaluator() {}
+    public Evaluator() {
+        // nothing to be done
+    }
 
     /** The result of the evaluation will be stored in this private variable */
-    private int computedValue;
+    private MyNumber computedValue;
 
     /** getter method to obtain the result of the evaluation
      *
      * @return an Integer object containing the result of the evaluation
      */
-    public Integer getResult() { return computedValue; }
+    public MyNumber getResult() {
+        return computedValue;
+    }
 
     /** Use the visitor design pattern to visit a number.
      *
      * @param n The number being visited
      */
     public void visit(MyNumber n) {
-        computedValue = n.getValue();
+        computedValue = n;
     }
 
     /** Use the visitor design pattern to visit an operation
      *
      * @param o The operation being visited
      */
-    public void visit(Operation o) throws ArithmeticException{
-        ArrayList<Integer> evaluatedArgs = new ArrayList<>();
+    public void visit(Operation o) {
+        ArrayList<MyNumber> evaluatedArgs = new ArrayList<>();
         //first loop to recursively evaluate each subexpression
-        for(Expression a:o.args) {
+        for(Expression a:o.getArgs()) {
             a.accept(this);
             evaluatedArgs.add(computedValue);
         }
-        //second loop to accumulate all the evaluated subresults
-        int temp = evaluatedArgs.get(0);
+        //second loop to accumulate all the evaluated sub results
+        MyNumber temp = evaluatedArgs.getFirst();
         int max = evaluatedArgs.size();
         for(int counter=1; counter<max; counter++) {
             temp = o.op(temp,evaluatedArgs.get(counter));
